일괄업로드, MFA 화면 개선